tests/ui/rfcs/rfc-2632-const-trait-impl/effects/ice-112822-expected-type-for-param.stderr
error[E0658]: const closures are experimental
  --> $DIR/ice-112822-expected-type-for-param.rs:4:5
   |
LL |     const move || {
   |     ^^^^^
   |
   = note: see issue #106003 <https://github.com/rust-lang/rust/issues/106003> for more information
   = help: add `#![feature(const_closures)]` to the crate attributes to enable

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/ice-112822-expected-type-for-param.rs:3:32
   |
LL | const fn test() -> impl ~const Fn() {
   |                                ^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
